<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_nike_swoosh_logo" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/et_search_background"
                android:drawableRight="@drawable/ic_baseline_search_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/search"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="?colorOnSurface"
                android:textColorHint="?android:textColorSecondary" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/banner_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/banner_background" />

                <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                    android:id="@+id/my_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"
                    app:dotsColor="@color/primaryColor"
                    app:dotsCornerRadius="10dp"
                    app:dotsSize="12dp"
                    app:dotsSpacing="4dp"
                    app:dotsStrokeColor="@color/primaryColor"
                    app:dotsStrokeWidth="2dp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/latest"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_show_all_latest"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/view_all"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latest_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/most_popular"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_show_all_popular"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/view_all"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_most_popular_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>